force-app/main/default/objects/Lead/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Адрес (ул., дом)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>