force-app/main/default/objects/Lead/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Согласен</label>
    <type>Checkbox</type>
</CustomField>